--- a/Server/.gitignore
+++ b/Server/.gitignore
@@ -1,35 +1,31 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
 # Node modules
-node_modules
+node_modules/
 
-# Build outputs
-dist
-dist-ssr
-*.local
+# Python cache
+__pycache__/
+
+# Logs
+*.log
+logs/
 
 # Environment variables
 .env
-.env.*
+.env.local
+.env.*.local
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# Uploaded files
+uploads/
+upload2/
+userpic/
+
+# Build files (if applicable)
+dist/
+build/
+
+# System files
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
 
-# Specific project ignores
-MinorNgo/.env
-Server/.env
+# Lock files (only keep one version if needed)
+package-lock.json
+yarn.lock
